Update Delete.cshtml(css html lại dùm nha mí 2)

--- a/Areas/Admin/Views/Movie/Delete.cshtml
+++ b/Areas/Admin/Views/Movie/Delete.cshtml
@@ -6,7 +6,295 @@
 
 <!DOCTYPE html>
 
-<html>
+<html>@model CinemaWeb.Models.movy
+
+@{
+    Layout = null;
+}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Edit Product - Dashboard Admin Template</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
+    <link rel="stylesheet" href="~/Areas/Admin/assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="~/Areas/Admin/assets/jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
+    <link rel="stylesheet" href="~/Areas/Admin/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Areas/Admin/assets/css/templatemo-style.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-xl">
+        <div class="container h-100">
+            <a class="navbar-brand" href="index.html">
+                <h1 class="tm-site-title mb-0">Ohayou Cinema</h1>
+            </a>
+            <button class="navbar-toggler ml-auto mr-0"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <i class="fas fa-bars tm-nav-icon"></i>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto h-100">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">
+                            <i class="fas fa-tachometer-alt"></i> Dashboard
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle"
+                           href="#"
+                           id="navbarDropdown"
+                           role="button"
+                           data-toggle="dropdown"
+                           aria-haspopup="true"
+                           aria-expanded="false">
+                            <i class="far fa-file-alt"></i>
+                            <span> Reports <i class="fas fa-angle-down"></i> </span>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Daily Report</a>
+                            <a class="dropdown-item" href="#">Weekly Report</a>
+                            <a class="dropdown-item" href="#">Yearly Report</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="products.html">
+                            <i class="fas fa-shopping-cart"></i> Products
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="accounts.html">
+                            <i class="far fa-user"></i> Accounts
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle"
+                           href="#"
+                           id="navbarDropdown"
+                           role="button"
+                           data-toggle="dropdown"
+                           aria-haspopup="true"
+                           aria-expanded="false">
+                            <i class="fas fa-cog"></i>
+                            <span> Settings <i class="fas fa-angle-down"></i> </span>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="#">Billing</a>
+                            <a class="dropdown-item" href="#">Customize</a>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link d-block" href="login.html">
+                            Admin, <b>Logout</b>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container tm-mt-big tm-mb-big">
+        <div class="row">
+            <div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
+                <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 class="tm-block-title d-inline-block">Thông tin chi tiết</h2>
+                        </div>
+                    </div>
+                    <div class="row tm-edit-product-row">
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-12">
+                                <form action="" method="post" class="tm-edit-product-form">
+                                    <div class="form-group mb-3">
+                                        <label for="name">
+                                            Tên phim
+                                        </label>
+                                        <div>
+                                            @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label for="expire_date">
+                                            Đạo diễn
+                                        </label>
+                                        <span class="form-control text-danger">
+                                            @Html.DisplayFor(model => model.director.director_name)
+                                        </span>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                            <label for="expire_date">
+                                                Quốc gia
+                                            </label>
+                                            <div>
+                                                @Html.EditorFor(model => model.country, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.country.country_name, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                            <label for="stock">
+                                                Thời lượng(phút)
+                                            </label>
+                                            <div>
+                                                @Html.EditorFor(model => model.duration_minutes, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.duration_minutes, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                            <label for="expire_date">
+                                                Thể loại
+                                            </label>
+                                            <div>
+                                                @Html.EditorFor(model => model.movie_type, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.movie_type.movie_type1, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                            <label for="stock">
+                                                Rating
+                                            </label>
+                                            <div>
+                                                @Html.EditorFor(model => model.rating, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.rating, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                            <label for="release_date">
+                                                Ngày bắt đầu
+                                            </label>
+                                            <div>
+                                                @Html.EditorFor(model => model.release_date, new { htmlAttributes = new { @class = "form-control datepicker" } })
+                                                @Html.ValidationMessageFor(model => model.release_date, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                        <div class="form-group mb-3 col-xs-12 col-sm-6">
+                                            <label for="end_date">
+                                                Ngày kết thúc
+                                            </label>
+                                            <div>
+                                                @Html.EditorFor(model => model.end_date, new { htmlAttributes = new { @class = "form-control datepicker" } })
+                                                @Html.ValidationMessageFor(model => model.end_date, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label for="description">Mô tả</label>
+                                        <div>
+                                            @Html.TextAreaFor(model => model.description, 6, 50, new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <label for="name">
+                                            Link trailer
+                                        </label>
+                                        <div>
+                                            @Html.EditorFor(model => model.url_trailer, new { htmlAttributes = new { @class = "form-control" } })
+                                            @Html.ValidationMessageFor(model => model.url_trailer, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-10">
+                                <div class="tm-product-img-edit mx-auto">
+                                    <div>
+                                        <img src="@Model.url_large_image" alt="Product image" class="img-fluid d-block mx-auto" />
+                                        @Html.ValidationMessageFor(model => model.url_large_image, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="custom-file mt-3 mb-3">
+                                    <div>
+                                        @Html.EditorFor(model => model.url_large_image, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.url_large_image, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="tm-product-img-edit mx-auto" style="padding-top: 1rem">
+                                    <div>
+                                        <img src="@Model.url_image" alt="Product image" class="img-fluid d-block mx-auto" />
+                                        @Html.ValidationMessageFor(model => model.url_image, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="custom-file mt-3 mb-3">
+                                    <div>
+                                        @Html.EditorFor(model => model.url_image, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.url_image, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            @using (Html.BeginForm())
+                            {
+                                @Html.AntiForgeryToken()
+
+                                <div class="form-actions no-color">
+                                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                                    @Html.ActionLink("Back to List", "Index")
+                                </div>
+                            }
+                        </div>
+                        }
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="tm-footer row tm-mt-small">
+        <div class="col-12 font-weight-light">
+            <p class="text-center text-white mb-0 px-4 small">
+                Copyright &copy; <b>2018</b> All rights reserved.
+
+                Design: <a rel="nofollow noopener" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
+            </p>
+        </div>
+    </footer>
+
+    <script src="~/Areas/Admin/assets/js/jquery-3.3.1.min.js"></script>
+    <script src="~/Areas/Admin/assets/jquery-ui-datepicker/jquery-ui.min.js"></script>
+    <script src="~/Areas/Admin/assets/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $("#release_date").datepicker({
+                defaultDate: "12/22/2024"
+            });
+        });
+    </script>
+    <script>
+        $(function () {
+            $("#end_date").datepicker({
+                defaultDate: "10/22/2024"
+            });
+        });
+    </script>
+</body>
+</html>
+
+
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Delete</title>
