fix bug thanh toán khi hủy, thêm cái quét mã qr mà k có được =)))

--- a/Areas/User/Views/BookTicket/ActorList.cshtml
+++ b/Areas/User/Views/BookTicket/ActorList.cshtml
@@ -115,7 +115,7 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="#">Ưu đãi</a></li>
-                                <li><a href="#">Phim hay tháng</a></li>
+                                <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                             </ul>
                         </li>
 
@@ -294,11 +294,10 @@
                             }
                         }
                     }
-                    <div class="row bonus">
-                        <div class="col-md-7"></div>
-                        <div class="col-md-4">
+                    <div class="row bonus" style="margin: 0; padding-bottom: 1rem;">
+                        <div style=" justify-content: flex-end; padding: 0; display: flex;">
                             <button type="button" class="new-mv">
-                                <a href="" class="">
+                                <a href="playing.html" class="">
                                     Xem thêm
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="angle-right" class="svg-inline--fa fa-angle-right ml-2" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" style="width: 15px; height:15px; "><path fill="currentColor" d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path></svg>
                                 </a>
