--- a/Areas/User/Views/BookTicket/PaymentFail.cshtml
+++ b/Areas/User/Views/BookTicket/PaymentFail.cshtml
@@ -103,7 +103,7 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
-                                <li><a href="#">Diễn viên</a></li>
+                                <li><a href="/User/BookTicket/ActorList">Diễn viên</a></li>
                                 <li><a href="#">Đạo diễn</a></li>
                                 <li><a href="#">Bình luận phim</a></li>
                             </ul>
@@ -114,7 +114,7 @@
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
                                 <li><a href="#">Ưu đãi</a></li>
-                                <li><a href="#">Phim hay tháng</a></li>
+                                <li><a href="/User/BookTicket/BestMovie">Phim hay tháng</a></li>
                             </ul>
                         </li>
 
