Thêm trang Ohayou Cinema, đang sửa chỗ Review Phim

--- a/Areas/User/Views/BookTicket/ActorList.cshtml
+++ b/Areas/User/Views/BookTicket/ActorList.cshtml
@@ -123,7 +123,7 @@
                             Rạp/Giá vé
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Rạp Đà Nẵng</a></li>
+                                <li><a href="/User/UserHome/OhayouCinema">Rạp Đà Nẵng</a></li>
                             </ul>
 
                         </li>
