--- a/Areas/User/Views/BookTicket/MovieReview.cshtml
+++ b/Areas/User/Views/BookTicket/MovieReview.cshtml
@@ -12,7 +12,7 @@
     <title>Ohayou Cinema</title>
     <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="~/Areas/User/assets/css/movietype.css?v=1">
+    <link rel="stylesheet" href="~/Areas/User/assets/css/moviereview.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -163,7 +163,7 @@
                         <div class="col-auto">
                             <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
                                 <img class="icon" src="~/Areas/User/assets/images/logo/logomini.png" alt="">
-                                @currentUser.full_name
+                                @*@currentUser.full_name*@
                             </div>
                             <div class="row1" style="font-size: small; font-weight: 500;">
                                 <img class="icon" src="~/Areas/User/assets/images/logo/icon-gift.190935e4.png" alt="">
@@ -175,136 +175,49 @@
             </div>
         </div>
     </div>
-
     <div class="line-default"></div>
     <div class="container wrapper">
         <div class="content-wrapper">
             <div class="row content">
                 <div class="col-md-9 left">
                     <div class="option">
-                        <h1 class="text">PHIM ĐIỆN ẢNH</h1>
+                        <h1 class="text">BÌNH LUẬN PHIM</h1>
                         <div class="row list-dropdown">
-                            <div class="col item">
-                                @if (ViewBag.TypeName != null)
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        @ViewBag.TypeName
-                                    </button>
-                                }
-                                else
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        Thể loại
-                                    </button>
-                                }
-                                <ul class="dropdown-menu" id="type-dropdown">
-                                    @foreach (var type in ViewBag.movieType)
-                                    {
-                                        <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(type.id)mc@(ViewBag.SelectedCountryId)my@(ViewBag.MovieYear)st@(ViewBag.MovieStatus)ss@(ViewBag.MovieSelect)">@type.movie_type1</a></li>
-                                    }
-                                </ul>
-                            </div>
-                            <div class="col item">
-                                @if (ViewBag.CountryName != null)
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        @ViewBag.CountryName
-                                    </button>
-                                }
-                                else
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        Quốc gia
-                                    </button>
-                                }
-                                <ul class="dropdown-menu" id="country-dropdown">
-                                    @foreach (var country in ViewBag.movieCountry)
-                                    {
-                                        <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(ViewBag.SelectedTypeId)mc@(country.id)my@(ViewBag.MovieYear)st@(ViewBag.MovieStatus)ss@(ViewBag.MovieSelect)">@country.country_name</a></li>
-                                    }
-                                </ul>
-                            </div>
-                            <div class="col item">
-                                @if (ViewBag.MovieYear != null)
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        @ViewBag.MovieYear
-                                    </button>
-                                }
-                                else
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        Năm
-                                    </button>
-                                }
+                            <div class="col-md-3 item">
+                                <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                                    Đang chiếu/sắp
+                                </button>
                                 <ul class="dropdown-menu">
-                                    @for (int year = currentDate.Year; year >= 2021; year--)
-                                    {
-                                        <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(ViewBag.SelectedTypeId)mc@(ViewBag.SelectedCountryId)my@(year.ToString())st@(ViewBag.MovieStatus)ss@(ViewBag.MovieSelect)">@year</a></li>
-                                    }
+                                    <li><a class="dropdown-item" href="#">Đang chiếu</a></li>
+                                    <li><a class="dropdown-item" href="#">Sắp chiếu</a></li>
                                 </ul>
                             </div>
-                            <div class="col item">
-                                @if (ViewBag.MovieStatus != null)
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        @ViewBag.StatusName
-                                    </button>
-                                }
-                                else
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        Đang chiếu/Sắp
-                                    </button>
-                                }
+                            <div class="col-md-3 item">
+                                <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+                                    Xem nhiều nhất
+                                </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(ViewBag.SelectedTypeId)mc@(ViewBag.SelectedCountryId)my@(ViewBag.MovieYear)st1ss@(ViewBag.MovieSelect)">Đang chiếu</a></li>
-                                    <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(ViewBag.SelectedTypeId)mc@(ViewBag.SelectedCountryId)my@(ViewBag.MovieYear)st0ss@(ViewBag.MovieSelect)">Sắp chiếu</a></li>
-                                </ul>
-                            </div>
-                            <div class="col item">
-                                @if (ViewBag.MovieSelect != null)
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        @ViewBag.SelectName
-                                    </button>
-                                }
-                                else
-                                {
-                                    <button type="button" class="btn-option btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                                        Xem nhiều nhất
-                                    </button>
-                                }
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(ViewBag.SelectedTypeId)mc@(ViewBag.SelectedCountryId)my@(ViewBag.MovieYear)st@(ViewBag.MovieStatus)ss1">Mới nhất</a></li>
-                                    <li><a class="dropdown-item" href="/User/BookTicket/MovieType/mt@(ViewBag.SelectedTypeId)mc@(ViewBag.SelectedCountryId)my@(ViewBag.MovieYear)st@(ViewBag.MovieStatus)ss0">Đánh giá tốt nhất</a></li>
+                                    <li><a class="dropdown-item" href="#">Mới nhất</a></li>
+                                    <li><a class="dropdown-item" href="#">Đánh giá tốt nhất</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    @if (TempData["MovieNotExist"] != null)
-                    {
-                        <div class="row movie-error">
-                            <img src="https://www.galaxycine.vn/_next/static/media/booking-fail.0c03e999.png" alt="" />
-                            <span class="text-dark-emphasis fw-medium py-2">@TempData["MovieNotExist"]</span>
-                        </div>
-                    }
                     <div class="my-8 mv-list">
                         <ul class="post-list">
-                            @foreach (var movie in ViewBag.MovieListType)
+                            @foreach(var movie in ViewBag.MovieList)
                             {
                                 <li class="movie">
                                     <div class="row">
                                         <div class="col-md-4 mv-poster">
-                                            <a href="/User/BookTicket/MovieDetail/@movie.id" class="img-link">
-                                                @if (movie.url_large_image != null)
-                                                {
-                                                    <img src="@movie.url_large_image" alt="" class="poster">
-                                                }
+                                            <a href="reviewdetail.html" class="img-link">
+                                                <img src="@movie.url_large_image" alt="" class="poster">
                                             </a>
                                         </div>
                                         <div class="col-md-8 mv-desciption">
-                                            <a href="/User/BookTicket/MovieDetail/@movie.id" class="mvname">
+                                            <a href="#" class="actorname">
+                                                [Review]
+                                                &nbsp;
                                                 @movie.title
                                             </a>
                                             <div class="post-description">
@@ -320,9 +233,14 @@
                                                         </path>
                                                     </svg> 2932
                                                 </button>
+                                                <a href="" class="rating">
+                                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star text-primary mr-1 hover:text-primary transition duration-500 ease-in-out" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" style="width: 20px; height:20px; "><path fill=" #f29538" d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"></path></svg>
+                                                    <span class="inline-block mr-1">@movie.rating</span>
+                                                    <span class="inline-block mr-1 vote">(829 votes)</span>
+                                                </a>
                                                 <div class="description">
                                                     <p class="des-text">
-                                                        @movie.description
+                                                        Hoạt hình vẫn luôn là thế mạnh của người Nhật. Thế nhưng, để đạt đến tầm toàn cầu thì Kimi No Na Wa/ Your Name là tác phẩm thứ hai làm được điều này.
                                                     </p>
                                                 </div>
                                             </div>
@@ -374,35 +292,18 @@
     </div>
     <div class="line-default"></div>
     <div class="container galaxy">
-        <h1 class="text">GALAXY CINEMA</h1>
-        <P>Bạn là một người mê phim, bạn thích khám phá bí mật phía sau hậu trường của các bom tấn, bạn thần tượng nhà làm phim nào đấy bởi tư duy vượt thời đại, phong cách quay phim đặc biệt và những câu chuyện đầy mới lạ, bạn ngưỡng mộ một ngôi sao bởi khả năng diễn xuất cực đỉnh… Thậm chí nếu bạn muốn tìm hiểu sâu hơn về điện ảnh, các trào lưu chủ nghĩa từng tạo tiếng vang trong lịch sử, sự ra đời của các thể loại và bản sắc riêng của từng nền điện ảnh đến từ các quốc gia khác nhau.</P>
-        <p>Chào mừng đến chuyên trang điện ảnh, nơi được xem như một thư viện với đầy đủ các thông tin về những bộ phim, đạo diễn, diễn viên dành cho người yêu phim. Tại đây bạn dễ dàng tìm hiểu được tiểu sử của vị đạo diễn yêu thích, có được thông tin bên lề của các bộ phim hay đang chiếu tại rạp. Ngoài ra nếu đam mê những tác phẩm kinh điển trong quá khứ, vẫn có những bài bình luận với hạng mục Phim Kinh Điển.</p>
-        <p>Đối với những ai có hứng thú tìm hiểu đời tư của các minh tinh hạng A, Galaxy Cinema cũng luôn cập nhật các tin tức nóng hổi từ họ. Bên cạnh đó còn bao gồm các bài phân tích mang tính chuyên môn, các chủ đề giúp nâng cao kiến thức điện ảnh cũng được giới thiệu qua loạt bài Ký Sự Điện Ảnh.</p>
+        <h1 class="text">OHAYOU CINEMA</h1>
+        <P>Những khi tới rạp chiếu phim để thưởng thức các tác phẩm đang làm mưa làm gió, ít nhiều gì ở phía người xem luôn đọng lại nhiều cảm xúc và suy nghĩ. Có những phim khiến công chúng bàn tán suốt về ý nghĩa thật sự mà nó mang tới. Cũng có lúc người ta nhăn nhó bởi vì quá nhiều tình tiết phức tạp được cài cắm, bắt buộc cần có kiến thức nền về điện ảnh mới có thể thấu hiểu.</P>
+        <p>Điện ảnh ngay từ những ngày đầu hình thành đã được xem là loại hình giải trí vô cùng tiềm năng. Trải nghiệm do phim ảnh mang tới là muôn vạn điều thú vị. Có lẽ vậy nên với những ai chỉ xem phim trên tinh thần “vui là chính”, thì chỉ cần đấy không phải một tác phẩm quá tệ đã đủ làm hài lòng họ. Lại có khán giả cho rằng điện ảnh là một loại hình nghệ thuật bao quát hết tất cả các hình thức nghệ thuật khác, họ xem phim để khám phá, tìm tòi tầng tầng lớp lớp ý nghĩa ẩn sâu sau những câu thoại và cảnh quay.</p>
+        <p>Đắn đo khi lựa chọn phim để xem, hoặc muốn hiểu rõ hơn về các thông điệp ẩn mà đạo diễn cài cắm. Galaxy Cinema sẽ cho bạn vài gợi ý với những bài bình luận phim mới nhất, đi cùng các đánh giá kèm sự phân tích mang tính chuyên môn đối với những tác phẩm đang ra mắt tại rạp chiếu phim. Được viết bởi những cây bút có kinh nghiệm và chuyên sâu về kiến thức điện ảnh, bạn sẽ dễ dàng tìm được những bài bình luận hoặc phân tích với đa dạng thể loại từ hành động, tình cảm…, đến khoa học viễn tưởng, kinh dị.</p>
     </div>
 
 
 
+    <div class="footer">
+    </div>
+
+    @*<script src="~/assets/js/actorscript.js"></script>*@
     <script src="~/Areas/User/assets/js/bootstrap.bundle.min.js"></script>
-
-    @*<script src="~/Areas/User/assets/js/moviedetail.js"></script>*@
-
 </body>
 </html>
-
-<script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-<script>
-    //$(document).ready(function () {
-    //    // Xử lý khi người dùng chọn thể loại
-    //    $('#type-dropdown').on('click', 'li', function () {
-    //        var selectedType = $(this).text(); // Lấy text của dropdown-item được chọn
-    //        $('#type-dropdown').prev('.btn-option').text(selectedType); // Đặt text của button thành selectedType
-    //    });
-
-    //    // Xử lý khi người dùng chọn quốc gia
-    //    $('#country-dropdown').on('click', 'li', function () {
-    //        var selectedCountry = $(this).text(); // Lấy text của dropdown-item được chọn
-    //        $('#country-dropdown').prev('.btn-option').text(selectedCountry); // Đặt text của button thành selectedCountry
-    //    });
-    //});
-</script>
