--- a/Areas/User/Views/UserHome/OhayouCinema.cshtml
+++ b/Areas/User/Views/UserHome/OhayouCinema.cshtml
@@ -1,7 +1,32 @@
-﻿@model CinemaWeb.Areas.User.Controllers.UserAccountController
-
-@{
+﻿@{
     CinemaWeb.Models.user currentUser = (CinemaWeb.Models.user)HttpContext.Current.Session["user"];
+    DateTime currentDate = DateTime.Now;
+}
+
+@functions {
+    // Phương thức để chuyển đổi ngày trong tuần sang tiếng Việt
+    public string TranslateDayOfWeek(DayOfWeek dayOfWeek)
+    {
+        switch (dayOfWeek)
+        {
+            case DayOfWeek.Monday:
+                return "Thứ Hai";
+            case DayOfWeek.Tuesday:
+                return "Thứ Ba";
+            case DayOfWeek.Wednesday:
+                return "Thứ Tư";
+            case DayOfWeek.Thursday:
+                return "Thứ Năm";
+            case DayOfWeek.Friday:
+                return "Thứ Sáu";
+            case DayOfWeek.Saturday:
+                return "Thứ Bảy";
+            case DayOfWeek.Sunday:
+                return "Chủ Nhật";
+            default:
+                return "";
+        }
+    }
 }
 
 <!DOCTYPE html>
@@ -9,11 +34,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="~/assets/images/logo/cinema-logo.png" type="image/png" />
+    <link rel="icon" href="~/assets/images/logo/cinema-logo.png">
     <title>Ohayou Cinema</title>
-    <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css" />
-    <link rel="stylesheet" href="~/Areas/User/assets/css/payfailstyle.css?v=1" />
+    <link rel="stylesheet" href="~/Areas/User/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/assets/font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="~/Areas/User/assets/css/ohayoucinema.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -30,7 +55,7 @@
                         <img src="~/assets/images/subimg/btn-ticket.png" alt="" class="img-buy-btn img-fluid">
                     </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding: 0">
                     <ul class="list-gr-1 list-group list-group-horizontal">
                         <li class="list-group-item movie-area">
                             Phim
@@ -38,7 +63,7 @@
                             <ul class="movie-status list-group">
                                 <li class="movie-sta-text-1 py-1">
                                     <i class="fa-solid fa-film"></i>
-                                    <a href="#">PHIM ĐANG CHIẾU</a>
+                                    <a href="#playing">PHIM ĐANG CHIẾU</a>
                                 </li>
                                 <div class="movie-list py-1">
                                     <div class="row">
@@ -50,7 +75,7 @@
                                                 if (movie.movie_status == true && count < 4)
                                                 {
                                                     <div class="col-md-3 sub-movie-list">
-                                                        <a href="" class="text-dark-emphasis movie-name">
+                                                        <a href="/User/BookTicket/MovieDetail/@movie.id" class="text-dark-emphasis movie-name">
                                                             <img src="@movie.url_image" alt="" class="img-fluid img-movie">
                                                             <button class="buy-ticket-btn btn">
                                                                 <i class="ti-ticket"></i>
@@ -65,10 +90,9 @@
                                         }
                                     </div>
                                 </div>
-
                                 <li class="movie-sta-text-2 py-1">
                                     <i class="fa-solid fa-film"></i>
-                                    <a href="#">PHIM SẮP CHIẾU</a>
+                                    <a href="#coming">PHIM SẮP CHIẾU</a>
                                 </li>
                                 <div class="movie-list py-1">
                                     <div class="row">
@@ -80,7 +104,7 @@
                                                 if (movie.movie_status == false && count < 4)
                                                 {
                                                     <div class="col-md-3 sub-movie-list">
-                                                        <a href="" class="text-dark-emphasis movie-name">
+                                                        <a href="/User/BookTicket/MovieDetail/@movie.id" class="text-dark-emphasis movie-name">
                                                             <img src="@movie.url_image" alt="" class="img-fluid img-movie">
                                                             <button class="buy-ticket-btn btn">
                                                                 <i class="ti-ticket"></i>
@@ -122,12 +146,11 @@
                             Rạp/Giá vé
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="/User/UserHome/OhayouCinema">Rạp Đà Nẵng</a></li>
+                                <li><a href="#">Rạp Đà Nẵng</a></li>
                             </ul>
 
                         </li>
                     </ul>
-
                 </div>
                 <div class="col-md-1">
                     <button class="search-btn btn">
@@ -166,7 +189,7 @@
                         <div class="col-auto">
                             <div class="user_name  row1 " style="font-weight: 600; font-size: small;">
                                 <img class="icon" src="~/Areas/User/assets/images/logo/logomini.png" alt="">
-                                @currentUser.full_name
+                                @*@currentUser.full_name*@
                             </div>
                             <div class="row1" style="font-size: small; font-weight: 500;">
                                 <img class="icon" src="~/Areas/User/assets/images/logo/icon-gift.190935e4.png" alt="">
@@ -178,43 +201,137 @@
             </div>
         </div>
     </div>
-    <div class="line-default"></div>
-    <div class="container-fluid">
-        <div class="row choose-area">
-            <div class="col-md-2 col-item1"></div>
-            <div class="col-md-8 col-item2">
-                <div class="row align-items-center">
-                    <div class="col-md navbar-item navbar-colored" id="navbar-item-1">Chọn phim / Suất</div>
-                    <div class="col-md navbar-item navbar-colored" id="navbar-item-2" style="padding-left: 5rem ;">Chọn ghế</div>
-                    <div class="col-md navbar-item navbar-colored" id="navbar-item-3" style="padding-left: 4rem;">Thanh toán</div>
-                    <div class="col-md navbar-item navbar-colored" id="navbar-item-4" style="padding-left: 4rem;">Xác nhận</div>
+
+    <div class="slider">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/assets/images/ohayou/galaxy-da-nang-5_1698052220835.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/assets/images/ohayou/galaxy-da-nang-4_1698052214666.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/assets/images/ohayou/galaxy-da-nang-3_1698052210667.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/assets/images/ohayou/galaxy-da-nang-1_1698052206857.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
-            <div class="col-md-2 col-item3"></div>
-        </div>
-        <div class="content ">
-            <div class="block_ticket-center">
-                <div class="block">
-                    <div class="text-center">
-                        <img src="~/assets/images/payment/booking-fail.0c03e999.png" alt="" style="width: 80px;height: 80px;">
-                        <h4>Xuất vé thất bại!</h4>
-                        <p>Trường hợp giao dịch chưa thành công, quý khách vui lòng không thực hiện giao dịch online lần nữa và tới rạp Ohayou Cinema để mua vé.</p>
-                        <p>Việc phản hồi tới quý khách có thể bị chậm trễ, mong quý khách thông cảm và kiên nhẫn cùng nhân viên CSKH của Ohayou Cinema.</p>
-                        <p>
-                            Chúng tôi cam kết sẽ hoàn lại 100% giá trị giao dịch lỗi đã bị trừ tiền sau khi đội ngũ CSKH kiểm tra và xác nhận. Vui lòng gởi thông tin giao dịch lỗi về email
-                            <a class="mail" href="mailto:service.ohayoucinema@gmail.com">service.ohayoucinema@gmail.com</a>
-                        </p>
-                        <a href="/User/UserHome" class="back">Quay về trang chủ</a>
-                    </div>
-                </div>
-            </div>
-            <h3 class="slogan">ĐẶT VÉ ONLINE - KHÔNG LO TRỄ NẢI</h3>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
 
+    <div class="content">
+        <div class="container wrapper">
+            <h1 class="text-right">PHIM</h1>
+            <div role="tabpanel">
+                <ul class="nav nav-tabs tab-list">
+                    @{
+                        DateTime date = DateTime.Now;
+                        while (date < DateTime.Now.AddDays(2))
+                        {
+                            if (date.Date == DateTime.Now.Date)
+                            {
+                                <li class="nav-item ">
+                                    <a onclick="selectDate('@date.ToString("ddMMyyyy")')" data-date="@date.ToString("ddMMyyyy")" class="nav-link active today-btn" data-bs-toggle="list" data-bs-target="#date-@date.ToString("ddMMyyyy")" href="#date-@date.ToString("ddMMyyyy")" role="tab">
+                                        <span>Hôm nay</span>
+                                        <span>@date.ToString("dd/MM")</span>
+                                    </a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item ">
+                                    <a onclick="selectDate('@date.ToString("ddMMyyyy")')" class="nav-link today-btn" data-bs-toggle="list" data-bs-target="#date-@date.ToString("ddMMyyyy")" href="#date-@date.ToString("ddMMyyyy")" role="tab">
+                                        <span>@TranslateDayOfWeek(date.DayOfWeek)</span>
+                                        <span>@date.ToString("dd/MM")</span>
+                                    </a>
+                                </li>
+                            }
+
+                            date = date.AddDays(1);
+                        }
+                    }
+                </ul>
+            </div>
+            <div class="tab-content all-movie">
+
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+
+    </div>
+
     <script src="~/Areas/User/assets/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
 
 <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script>
 
+    $(document).ready(function () {
+        function getCurrentDateFormatted() {
+            var today = new Date();
+            var day = String(today.getDate()).padStart(2, '0');
+            var month = String(today.getMonth() + 1).padStart(2, '0'); 
+            var year = today.getFullYear();
+
+            return day + month + year; 
+        }
+
+        var currentDate = getCurrentDateFormatted();
+        $(".today-btn[data-date='" + currentDate + "']").trigger('click');
+    });
+        
+    function selectDate(selectedDate) {
+        $.ajax({
+            url: '/User/UserHome/GetMovie',
+            type: 'GET',
+            data: { displayDate: selectedDate},
+            success: function (data) {
+                var results = data;
+                console.log(results)
+                $('.all-movie').html('')
+                var tabpaneDiv = $('<div></div>').addClass('tab-pane active').attr({
+                    id: 'date' + selectDate,
+                    role: 'tabpanel'
+                })
+                $('.all-movie').append(tabpaneDiv)
+                var rowlistItem = $('<div></div>').addClass('row list');
+                tabpaneDiv.append(rowlistItem)
+                for (var i = 0; i < results.length; i++) {
+
+                    var movieId = results[i].id
+                    console.log(movieId)
+
+                    var collistItem = $('<div></div>').addClass('col-md-2 item');
+                    var link = $('<a></a>').addClass('text-dark-emphasis fw-medium').attr('href', '/User/BookTicket/MovieDetail/' + movieId)
+                    var imgMovie = $('<img></img>').attr('src', results[i].url_image)
+                    var movieName = $('<p></p>').text(results[i].title)
+                    link.append(imgMovie, movieName)
+                    collistItem.append(link);
+                    rowlistItem.append(collistItem)
+                }
+            },
+            error: function (err) {
+                console.log(err)
+            }
+        });
+    };
+</script>
