--- a/Areas/User/assets/css/userstyle.css
+++ b/Areas/User/assets/css/userstyle.css
@@ -118,14 +118,14 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.movie-list .col-md-3 {
+    position: relative;
+}
+
 .movie-list a {
     text-decoration: none;
     color: #000;
     font-weight: 500;
-}
-
-.movie-list .col-md-3 {
-    position: relative;
 }
 
 .img-movie {
@@ -143,7 +143,7 @@
     border: none;
     width: 120px;
     height: 35px;
-    background-color: #F26B38;
+    background-color: rgb(242 107 56 / 1);
     color: #fff;
     position: absolute;
     top: 43%;
@@ -151,35 +151,35 @@
     transform: translate(-50%, -50%);
 }
 
-    .movie-list .buy-ticket-btn:hover ~ .img-movie,
-    .movie-list .img-movie:hover {
-        filter: brightness(65%);
-    }
+.sub-movie-list1:hover img,
+.sub-movie-list:hover img {
+    filter: brightness(0.65);
+}
+/*.movie-list .buy-ticket-btn:hover ~ .img-movie,
+.movie-list .img-movie:hover {
+    filter: brightness(65%);
+}*/
+.movie-list .img-movie:hover + .buy-ticket-btn,
+.movie-list .buy-ticket-btn:hover {
+    display: block;
+}
 
-        .movie-list .img-movie:hover + .buy-ticket-btn,
-        .movie-list .buy-ticket-btn:hover {
-            display: block;
-        }
-
-    .movie-list .buy-ticket-btn:hover {
-        background-color: #f29538;
-    }
+.movie-list .buy-ticket-btn:hover {
+    background-color: rgb(251 148 64 / 1);
+}
 
 .sub-movie-list1 {
     margin-bottom: 2rem;
 }
 
 .search-icon {
-    font-size: 15px;
-    font-weight: 500;
+    font-size: 14px;
 }
 
 .search-btn {
     border: none;
-    padding-right: 0px;
-    margin-right: 0px;
+    padding-left: 34px;
     color: #777777;
-    margin-left: 70px;
 }
 
 .login-area {
