Thêm mã hóa mật khẩu

--- a/Areas/User/assets/css/bookticket.css
+++ b/Areas/User/assets/css/bookticket.css
@@ -173,9 +173,9 @@
     background-color: rgb(251 148 64 / 1);
 }
 
-.sub-movie-list1 {
+/*.sub-movie-list1 {
     margin-bottom: 2rem;
-}
+}*/
 
 .search-icon {
     font-size: 14px;
