--- a/Areas/User/assets/css/moviereview.css
+++ b/Areas/User/assets/css/moviereview.css
@@ -326,10 +326,10 @@
     font-family: Nunito Sans, sans-serif;
 }
 
-.movie-list {
+/*.movie-list {
     margin-top: 32px;
 }
-
+*/
 .post-list {
     list-style: none;
     margin-top: 2rem;
